test/pseudo_tty/test-internal-module-id.out
internal:*.js:*
    throw new TypeError('*');
    ^
TypeError: *
    at queueMicrotask (internal:*.js:*)
